<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/navigation"
            app:startDestination="@id/citiesFragment">
    <fragment
        android:id="@+id/citiesFragment"
        android:name="com.quaksire.weatherapp.CitiesFragment"
        android:label="@string/locations"
        tools:layout="@layout/fragment_cities">
        <action
                android:id="@+id/action_cities_to_city"
                app:destination="@id/cityWeatherFragment"
                app:enterAnim="@anim/slide_in_right"
                app:exitAnim="@anim/slide_out_left"
                app:popEnterAnim="@anim/slide_in_left"
                app:popExitAnim="@anim/slide_out_right"/>
        <action
                android:id="@+id/action_cities_to_settings"
                app:destination="@id/settingsFragment"
                app:enterAnim="@anim/slide_in_right"
                app:exitAnim="@anim/slide_out_left"
                app:popEnterAnim="@anim/slide_in_left"
                app:popExitAnim="@anim/slide_out_right"/>

        <action
                android:id="@+id/action_cities_to_add_city"
                app:destination="@id/addCityFragment"
                app:enterAnim="@anim/slide_in_right"
                app:exitAnim="@anim/slide_out_left"
                app:popEnterAnim="@anim/slide_in_left"
                app:popExitAnim="@anim/slide_out_right"/>
    </fragment>

    <fragment
        android:id="@+id/cityWeatherFragment"
        android:name="com.quaksire.weatherapp.CityWeatherFragment"
        tools:layout="@layout/fragment_city_weather">
        <argument
            android:name="cityId"
            app:argType="integer"
            android:defaultValue="0"/>

        <argument
                android:name="cityName"
                app:argType="string"
                android:defaultValue="0"/>
    </fragment>

    <fragment
            android:id="@+id/settingsFragment"
            android:name="com.quaksire.weatherapp.SettingsFragment"
            android:label="@string/settings"
            tools:layout="@layout/fragment_settings">
    </fragment>

    <fragment
            android:id="@+id/addCityFragment"
            android:name="com.quaksire.weatherapp.AddCityFragment"
            android:label="@string/add_location"
            tools:layout="@layout/fragment_add_city">
    </fragment>

</navigation>