<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
            android:title="@string/add_location_menu_add"
            android:id="@+id/add_location_menu_save"
            app:showAsAction="always"
            android:icon="@drawable/ic_action_save"/>
</menu>